log
Thu 25 Apr 2024 03:21:49 PM UTC: 
 tests:  0|6
total_score: 0/70
482f3d3
Thu 25 Apr 2024 03:28:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3acc79f
Thu 25 Apr 2024 03:30:48 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
6252c03
Thu 25 Apr 2024 03:32:06 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
b4ff6ab
Thu 25 Apr 2024 03:33:18 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
41f5ccc
Thu 25 Apr 2024 03:34:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:28: error: too few arguments to function ‘calloc’
   56 |   mapa->buckets = (Pair**) calloc(capacity * sizeof(Pair*));
      |                            ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
1c5bb0e
Thu 25 Apr 2024 03:35:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:29: error: too few arguments to function ‘calloc’
   56 |   mapa->buckets = (Pair**) *calloc(capacity * sizeof(Pair*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
213873c
Thu 25 Apr 2024 03:36:44 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
72d5ac2
Thu 25 Apr 2024 03:48:45 PM UTC: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:17: error: invalid operands to binary % (have ‘char *’ and ‘long int’)
   45 |   int pos = key % map->capacity;
      |                 ^ ~~~~~~~~~~~~~
      |                      |
      |                      long int
Compilation failed
aa1ab15
Thu 25 Apr 2024 03:49:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c308aa7
Thu 25 Apr 2024 03:50:58 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
385ffb0
Thu 25 Apr 2024 03:51:36 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 20/70
a95e99c
Thu 25 Apr 2024 03:51:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
ee2b26d
Thu 25 Apr 2024 03:55:14 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
5e8657b
Thu 25 Apr 2024 03:56:44 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
acabadd
Thu 25 Apr 2024 03:58:28 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 30/70
99d0981
Thu 25 Apr 2024 04:01:20 PM UTC: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  3|4
total_score: 30/70
c46cc45
Thu 25 Apr 2024 04:01:36 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
618bd15
Thu 25 Apr 2024 04:02:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
768009f
Thu 25 Apr 2024 04:03:38 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
b928171
Thu 25 Apr 2024 04:04:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dbf1a56
Thu 25 Apr 2024 04:05:29 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
c0da94e
Thu 25 Apr 2024 04:09:26 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
366f282
Thu 25 Apr 2024 04:10:02 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|4
total_score: 30/70
2c85fb1
Thu 25 Apr 2024 04:11:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 30/70
770a901
Thu 25 Apr 2024 04:13:20 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  9|3
total_score: 40/70
e6ea0f3
Sat 27 Apr 2024 09:28:55 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
1ffdd95
Sat 27 Apr 2024 09:30:56 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|3
total_score: 40/70
f2b8f73
Sat 27 Apr 2024 09:31:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:108:16: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
  108 |   map->current = map->buckets[pos];
      |                ^
cc1: all warnings being treated as errors
Compilation failed
cd39953
Sat 27 Apr 2024 09:31:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
617b169
Sat 27 Apr 2024 09:33:11 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
27fa20f
Sat 27 Apr 2024 09:35:14 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 40/70
97a6635
Sat 27 Apr 2024 09:35:43 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:113:8: error: variable ‘flag’ set but not used [-Werror=unused-but-set-variable]
  113 |   bool flag = false;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
f03b419
Sat 27 Apr 2024 09:36:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
a5cbe49
Sat 27 Apr 2024 09:37:56 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 40/70
bc21804
Sat 27 Apr 2024 09:38:17 PM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:109:27: error: expected ‘;’ before ‘}’ token
  109 |   return map->buckets[pos]
      |                           ^
      |                           ;
  110 | }
      | ~                          
Compilation failed
466cef7
Sat 27 Apr 2024 09:38:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
1b39371
Sat 27 Apr 2024 09:44:30 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  10|3
total_score: 40/70
e10106a
Sat 27 Apr 2024 09:45:42 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
db2e4f3
Sat 27 Apr 2024 09:47:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:98:29: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   98 |   while(strcmp(map->buckets[pos]->key, key) == 0){
      |                             ^~~
      |                             pow
hashmap.c:98:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fcd143d
Sat 27 Apr 2024 09:47:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fb04b45
Sat 27 Apr 2024 09:50:33 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  12|2
total_score: 50/70
a3602ee
Sat 27 Apr 2024 09:57:55 PM UTC: 
 hashmap.c | 32 ++++++++++++++------------------
 1 file changed, 14 insertions(+), 18 deletions(-)
 tests:  14|1
total_score: 60/70
0501447
